# vcl-graph

./: .gitmodules  CMakeLists.txt  shell.nix
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/basic/nodes/: gain.vcl  osc.vcl  output.vcl
include/VCLG/: ExecutionContext.hpp  Graph.hpp  Node.hpp  Port.hpp
src/: ExecutionContext.cpp  Graph.cpp  Node.cpp  NodeMetadata.cpp  NodeMetadata.hpp  NodeProcessor.cpp  NodeProcessor.hpp  Port.cpp  RenamingScope.cpp  RenamingScope.hpp
